# check-wheel-contents

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: test.yml
check_wheel_contents/: __main__.py  checker.py  checks.py  contents.py  util.py  whlfilename.py
src/check_wheel_contents/: __init__.py  __main__.py  checker.py  checks.py  config.py  configfile.py  contents.py  directory.py  errors.py  filetree.py  util.py  whlfilename.py
test/: conftest.py  test_checker.py  test_checking.py  test_configdict.py  test_configuration.py  test_directory.py  test_failedcheck.py  test_file.py  test_main.py  test_parse_checks.py  test_util.py  test_wheelcontents.py
test/data/: MPC2860-0.3-py3-none-any.whl  bad-tool-sect.toml  bad_purelib_line-1.0.0-py3-none-any.whl  bcrypt-3.1.7-cp38-cp38-win_amd64.whl  empty_purelib_line-1.0.0-py3-none-any.whl
test/data/configfiles/: badtool.toml  config.json  config.toml  empty-lists.toml  empty-sect.ini  empty-sect.json  empty-strs.cfg  empty-strs.json  neither.cfg  setup.cfg  setup.json  triple.cfg  triple.json  wrongext.json  wrongext.txt  wrongsect.toml
test/data/wheels/: MPC2860-0.3-py3-none-any.json  NLPTriples-0.1.7-py3-none-any.json  NLPTriples-0.1.7-py3-none-any.whl  bad_purelib_line-1.0.0-py3-none-any.json  badname-1.0.json  bcrypt-3.1.7-cp38-cp38-win_amd64.json  empty_purelib_line-1.0.0-py3-none-any.json  module_file_folder_shadow-0.1.0-py3-none-any.json  module_file_folder_shadow-0.1.0-py3-none-any.whl  mxnet_coreml_converter-0.1.0a7-cp27-cp27m-macosx_10_7_x86_64.json  mxnet_coreml_converter-0.1.0a7-cp27-cp27m-macosx_10_7_x86_64.whl  no_purelib_line-1.0.0-py3-none-any.json  no_purelib_line-1.0.0-py3-none-any.whl  no_record-1.0.0-py3-none-any.json  no_record-1.0.0-py3-none-any.whl  no_wheel_file-1.0.0-py3-none-any.json  no_wheel_file-1.0.0-py3-none-any.whl  physlearn-1.2.2-py3-none-any.json  physlearn-1.2.2-py3-none-any.whl  ttyrec2video-0.1.0.dev1-py3-none-any.json  ttyrec2video-0.1.0.dev1-py3-none-any.whl  whatodo-0.1.0a4-py3-none-any.json  whatodo-0.1.0a4-py3-none-any.whl
