[aliases]
make = sdist bdist_wheel

[metadata]
name = check-wheel-contents
version = attr:check_wheel_contents.__version__
description = Check your wheels have the right contents
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = check-wheel-contents@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/check-wheel-contents

keywords =
    linter
    packaging
    wheel

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

project_urls =
    Source Code = https://github.com/jwodder/check-wheel-contents
    Bug Tracker = https://github.com/jwodder/check-wheel-contents/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
packages = find:
package_dir =
    =src
python_requires = ~= 3.6
install_requires =
    attrs            >= 18.1
    click            ~= 7.0
    packaging
    property-manager ~= 3.0
    toml
    wheel-filename   ~= 1.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    check-wheel-contents = check_wheel_contents.__main__:main

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
no_error_summary = True
show_traceback = True
