[metadata]
name = check-wheel-contents
version = attr:check_wheel_contents.__version__
description = Check your wheels have the right contents
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = check-wheel-contents@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/check-wheel-contents

keywords =
    linter
    packaging
    wheel

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

project_urls =
    Source Code = https://github.com/jwodder/check-wheel-contents
    Bug Tracker = https://github.com/jwodder/check-wheel-contents/issues

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    attrs            >= 18.1
    click            >= 7.0
    packaging
    backports.cached-property; python_version < "3.8"
    pydantic         ~= 2.0
    tomli            >= 1.2, < 3.0; python_version < "3.11"
    wheel-filename   ~= 1.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    check-wheel-contents = check_wheel_contents.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
warn_required_dynamic_aliases = True
